[package]
name = "dmw3-model-to-gltf"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2.0"
binwrite = "0.2.1"
clap = { version = "4.5.3", features = ["derive"] }
gltf-json = { version = "1.4.0", path = "gltf/gltf-json" }
image = "0.25.1"
rlen = { path = "./rlen" }
tim = { path = "./tim" }

[workspace]
members = [
  "rlen",
  "tim"
]
