[package]
name = "dmw3-model-to-gltf"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
binread = "2.2.0"
binwrite = "0.2.1"
clap = { version = "4.5.3", features = ["derive"] }
gltf-json = "1.4.1"
image = "0.25.1"
imageproc = "0.25.0"
rlen = { path = "./rlen" }
tim = { path = "./tim" }

[workspace]
members = [
  "rlen",
  "tim"
]
