[package]
name = "dmw3-model-to-gltf"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
binread = "2.2.0"
binwrite = "0.2.1"
clap = { version = "4.5.3", features = ["derive"] }
gltf-json = "1.4.1"
image = "0.25.1"
rlen = { git = "https://github.com/markisha64/dmw3-util" }
tim = { git = "https://github.com/markisha64/dmw3-util" }
dmw3_model = { git = "https://github.com/markisha64/dmw3-util" }
dmw3_pack = { git = "https://github.com/markisha64/dmw3-util" }
